fixed jump inputs after wrong validate

--- a/src/components/login/login.module.scss
+++ b/src/components/login/login.module.scss
@@ -36,4 +36,5 @@ h1{
 .error{
   color: #ab2020;
   font-size: 12px;
+  height: 15px;
 }
